--- a/curiousaddict-website/src/components/Navbar.css
+++ b/curiousaddict-website/src/components/Navbar.css
@@ -19,6 +19,7 @@
 }
 
 .navbar-logo {
+  white-space: nowrap;
   color: #fff;
   justify-self: start;
   margin-left: 20px;
@@ -27,6 +28,10 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
+}
+
+.navbar-logo i {
+  padding-right: 20px;
 }
 
 .fa-typo3 {
